[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "haze"
version = "0.1.0"
description = "Keep your coding agents in sync"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
haze = "haze.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["haze*"]

[tool.setuptools.package-data]
haze = ["settings_map.json"]
